fix(Unable to choose wallet if covered by button): Add spacing at the bottom of the wallet list to m

--- a/src/pages/@core/wallet/wallet-list/wallet-list.scss
+++ b/src/pages/@core/wallet/wallet-list/wallet-list.scss
@@ -1,4 +1,7 @@
 page-wallet-list {
+  [spacing] {
+    padding: 3.5rem 0;
+  }
 }
 
 .wallet-on-press {
